# cmor

./: AUTHORS  Makefile.am  bootstrap  configure.in  get_git_version.sh
Doc/: Makefile.am
Src/: Makefile.am
Test/: 3D_txy.input  3D_txy_split_lon.input  3D_xty_split_lon.input  Makefile.am  cipcc_test_code.c  climatology_test_code.f90  cmor_speed_and_compression.py  cmor_speed_and_compression_01.py  ctest_grid.c  ctest_lots_of_variables.c  ipcc_test_code.f90  jamie_hybrid_height.py  jamie_positive.py  karls_test.f90  main_prog.f90  mytest_4d_d_big_array_2.f90  mytest_4d_d_big_array_3.f90  mytest_4d_d_big_array_4.f90  mytest_4d_d_big_array_5.f90  mytest_4d_r.f90  mytest_4d_r_big_array.f90  noinput  pyrunner.sh  rewrite_harvardf_data.f90  runner.sh  tas_3D_noreorder.input  tas_mytest_3d_i.input  test1.f90  test2.f90  test3.f90  test4.f90  test_3h.f90  test_any_from_asc.f90  test_any_from_asc_i.f90  test_cmor_grid_alejandro.f90  test_cmor_grid_time_varying.f90  test_dimensionless.f90  test_fortran_example_00.f90  test_fortran_example_01.f90  test_lots_of_variables.f90  (+44 more)
TestTables/: Makefile.am
cmor/: Makefile.am
include/: Makefile.am  cmor_locale.h.in
m4macros/: udunits2.m4
